Config settings split into categories
We'll rather avoid inflating the default category

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,5 @@
-#World settings
-[DEFAULT]
-#setup maximum days that will be generated
+[WORLD]
 World_Max_Days = 500
 
-
-#Arena settings
-#set up maximum schedules for each day
+[ARENA]
 Arena_Schedules = 5
