--- a/config.ini
+++ b/config.ini
@@ -5,4 +5,11 @@ NumOfSimulatedDays = 50
 [ARENA]
 Arena_Schedules = 5
 
+[GLADIATOR]
+Gold = 500
+Strength = 5
+Agility = 3
+Vitality = 8
+Luck = 2
+Max_Health = 50
 
