implemented races which are configurable in config.ini, also serializable

--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,38 @@
 [WORLD]
-World_Max_Days = 800
+World_Max_Days = 300
 NumOfSimulatedDays = 50
 
 [ARENA]
 Arena_Schedules = 5
 NumOfArenaGladiators = 5
-NumOfArenasGenerated = 5
+NumOfArenasGenerated = 3
 
 [GLADIATOR]
 Gold = 500
 Base_Stat = 5
 Roll_Range = 7
-Max_Health = 400
+Max_Health = 200
 
+[HUMAN]
+Agility = 0
+Strength = 0
+Vitality = 0
+Luck = 2
+
+[ELF]
+Agility = 4
+Strength = -2
+Vitality = -2
+Luck = 0
+
+[DWARF]
+Agility = -3
+Strength = 1
+Vitality = 1
+Luck = 1
+
+[ORC]
+Agility = -2
+Strength = 2
+Vitality = 3
+Luck = -3
