implemented races which are configurable in config.ini, also serializable
implemented traits which are configurable and serializable

--- a/config.ini
+++ b/config.ini
@@ -36,3 +36,21 @@ Agility = -2
 Strength = 2
 Vitality = 3
 Luck = -3
+
+[TRAITS]
+Roll_chance = 20
+Strong_effect = 3
+Weak_effect = -3
+Nimble_effect = 3
+Sluggish_effect = -3
+Vigorous_effect = 3
+Fragile_effect = -3
+Blessed_effect = 3
+Unfortunate_effect = -3
+
+
+
+
+
+
+
