reworked colors with config.ini and config.py

--- a/config.ini
+++ b/config.ini
@@ -13,6 +13,14 @@ Base_Stat = 5
 Roll_Range = 7
 Max_Health = 200
 
+[COLORS]
+Color_of_world = cyan
+Color_of_menu_and_separators = light_blue
+Color_of_arenas = light_cyan
+Color_of_gladiators = light_yellow
+
+
+
 [HUMAN]
 Agility = 0
 Strength = 0
