--- a/config.ini
+++ b/config.ini
@@ -19,7 +19,8 @@ Color_of_menu_and_separators = light_blue
 Color_of_arenas = light_cyan
 Color_of_gladiators = light_yellow
 
-
+[MATCHMAKER]
+Maximum_difference_in_fame = 15
 
 [HUMAN]
 Agility = 0
