--- a/config.ini
+++ b/config.ini
@@ -18,6 +18,7 @@ Color_of_world = cyan
 Color_of_menu_and_separators = light_blue
 Color_of_arenas = light_cyan
 Color_of_gladiators = light_yellow
+Num_of_colors = 10
 
 [MATCHMAKER]
 Maximum_difference_in_fame = 15
